--- a/manifest.json
+++ b/manifest.json
@@ -5,8 +5,9 @@
     "default_icon":  "icons/icon-32.png",
     "default_popup": "tabs.html"
   },
-  "description":  "Lista de enlaces de la Comunidad WordPress Venezuela.",
-  "homepage_url": "https://github.com/jordicuevas",
+  "author": "Jordi Cuevas|Twitter: @jordicuevas|jordicuevas@gmail.com",
+  "description":  "Recursos y enlaces para Desarrolladores de la Comunidad WordPress Venezuela.",
+  "homepage_url": "https://github.com/jordicuevas/WPVE",
   "icons": {
     "48": "icons/icon-32.png"
   },
